--- a/ViewPoint_files/sequence/sequencejs-theme.modern-slide-in.css
+++ b/ViewPoint_files/sequence/sequencejs-theme.modern-slide-in.css
@@ -250,15 +250,15 @@ table {
 }
 #sequence-theme .model {
   left: 30%;
-  bottom: -48%;
+  bottom: -20%;
   opacity: 0;
   position: relative;
   height: auto !important;
-  max-height: 568px !important;
-  width: 30%;
+  /*max-height: 568px !important;*/
+  width: 100%;
   min-width: 225px;
   /*prevents the model from shrinking when the browser is resized*/
-  max-width: 266px;
+  max-width: 440px;
 }
 #sequence-theme .animate-in .model {
   left: 15%;
